--- a/frontend/src/features/auth/styles/Login.module.css
+++ b/frontend/src/features/auth/styles/Login.module.css
@@ -1,8 +1,3 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-}
 .loginSection {
   background-image: url('/src/assets/backgroung.jpg');
   background-position: center;
@@ -11,57 +6,50 @@
   width: 100%;
 }
 
-.sectionLayer {
+.loginSection .sectionLayer {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.63);
   width: 100%;
 }
 
-form {
+.loginSection form {
   width: 40%;
   margin-left: auto;
   padding: 20px;
   color: rgb(45, 102, 107);
 }
 
-h1 {
+.loginSection h1 {
   font-weight: 600;
   font-size: 28px;
-  color: rgb(45, 102, 107) !important;
+  color: rgb(45, 102, 107);
   margin-left: auto;
   width: fit-content;
   margin-right: 13%;
   padding-top: 5%;
 }
 
-
-
-button {
-    background-color: rgb(45, 102, 107);
-    color: #fff;
-    font-weight: 600;
-    font-size: 24px !important;
+.loginSection button {
+  background-color: rgb(45, 102, 107);
+  color: #fff;
+  font-weight: 600;
+  font-size: 24px;
   border: none;
   width: 100%;
-  border-radius: 15px !important;
+  border-radius: 15px;
   padding: 10px;
-  margin: 10px 0px !important;
+  margin: 10px 0px;
 }
 
-
-
-
-
-
 @media (max-width: 991px) {
-  .sectionLayer {
+  .loginSection .sectionLayer {
     justify-content: center;
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
       url('/src/assets/backgroung.jpg') center/cover no-repeat;
     padding: 1rem;
   }
 
-  .sectionLayer .container {
+  .loginSection .sectionLayer .container {
     width: 100%;
     max-width: 500px;
   }
@@ -72,22 +60,22 @@ button {
     flex-direction: column;
   }
 
-  .sectionLayer {
+  .loginSection .sectionLayer {
     justify-content: center;
     align-items: center;
     padding: 2rem 1rem;
   }
-  form{
+
+  .loginSection form {
     width: 100%;
     height: 100%;
-    
   }
-  .form-control{
-    padding: 20px !important;
-  }
-  
 
-  .sectionLayer .container {
+  .loginSection .form-control {
+    padding: 20px;
+  }
+
+  .loginSection .sectionLayer .container {
     width: 100%;
     max-width: 100%;
     border-radius: 0;
@@ -95,5 +83,3 @@ button {
     background-color: white;
   }
 }
-/* --- */
-
